test/files/neg/macro-incompatible-macro-engine-b/Test_3.scala
//> using options -Vmacro-lite
object Test extends App {
  Macros.foo
  Macros.foo
}
